# twitter-news-summary

./: .env.example  .gitignore  CLAUDE.md  COMMANDS.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  TODO.md  fly.test.toml  fly.toml
.claude/agents/: comprehensive-test-engineer.md
.claude/commands/: debug-failures.md  pr-unresolved.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  deploy-test.yml  deploy.yml  summarize.yml
data/: usernames.txt
docs/: investigation-duplicate-messages-2026-01-20.md
migrations/: 20260115000001_create_subscribers.sql  20260115000002_create_summaries.sql  20260115000003_alter_chat_id_to_bigint.sql  20260116000001_create_delivery_failures.sql  20260118000001_add_language_support.sql  20260119000001_flexible_language_codes.down.sql  20260119000001_flexible_language_codes.sql
nitter-selfhost/: FLY_IO_SETUP.md  HOSTING_COMPARISON.md  ORACLE_CLOUD_SETUP.md  README.md  docker-compose.yml  nitter.conf  setup.sh
scripts/: generate-secrets.sh
src/: config.rs  db.rs  lib.rs  main.rs  openai.rs  retry.rs  rss.rs  scheduler.rs  security.rs  telegram.rs  translation.rs  twitter.rs  whatsapp.rs
src/i18n/: language.rs  metrics.rs  mod.rs  registry.rs  strings.rs  validator.rs
tests/: integration_tests.rs
