[package]
name = "twitter-news-summary"
version = "0.1.0"
edition = "2021"
description = "Summarize Twitter list tweets and send via Telegram"
default-run = "twitter-news-summary"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
rss = "2.0"
futures = "0.3"

[lib]
name = "twitter_news_summary"
path = "src/lib.rs"

[[bin]]
name = "twitter-news-summary"
path = "src/main.rs"

[[bin]]
name = "export"
path = "src/bin/fetch_list_members.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
